--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -2,7 +2,7 @@ name: PENTEST Pipeline - DevSecOps
 
 on:
   push:
-    branches: [main]
+    branches: main
   workflow_dispatch:
     inputs:
       target_environment:
@@ -10,13 +10,18 @@ on:
         required: true
         default: 'staging'
         type: choice
-        options: [staging, production]
+        options:
+          - staging
+          - production
       scan_intensity:
         description: 'Scan Intensity'
         required: true
         default: 'medium'
         type: choice
-        options: [light, medium, intensive]
+        options:
+          - light
+          - medium
+          - intensive
       target_url:
         description: 'Target URL (optional override)'
         required: false
@@ -50,7 +55,6 @@ jobs:
             echo "❌ Target is not accessible"
             echo "accessible=false" >> $GITHUB_OUTPUT
           fi
-      
       - name: 📋 Environment Check
         run: |
           echo "🎯 Target URL: ${{ env.TARGET_URL }}"
@@ -66,9 +70,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: pre-scan-validation
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
-
+      - uses: actions/checkout@v4
       - name: Run OWASP ZAP Baseline Scan
         if: env.SCAN_INTENSITY == 'light'
         uses: zaproxy/action-baseline@v0.10.0
@@ -77,7 +79,6 @@ jobs:
           target: ${{ env.TARGET_URL }}
           fail_action: false
           cmd_options: '-J report_json.json -r report_html.html -w report_md.md'
-
       - name: Run OWASP ZAP Full Scan
         if: env.SCAN_INTENSITY == 'medium' || env.SCAN_INTENSITY == 'intensive'
         uses: zaproxy/action-full-scan@v0.8.0
@@ -86,43 +87,15 @@ jobs:
           target: ${{ env.TARGET_URL }}
           fail_action: false
           cmd_options: '-J report_json.json -r report_html.html -w report_md.md'
-
-      - name: Run OWASP ZAP API Scan
-        if: env.SCAN_INTENSITY == 'intensive'
-        run: |
-          docker run -v $(pwd):/zap/wrk/:rw \
-            -t owasp/zap2docker-stable zap-api-scan.py \
-            -t ${{ env.TARGET_URL }}/api/swagger.json \
-            -f openapi \
-            -J zap-api.json \
-            -r zap-api.html || true
-
-      - name: List Generated Files
-        if: always()
-        run: ls -lah
-
-      - name: Show Report Contents
-        if: always()
-        run: |
-          echo "=== report_html.html ==="
-          cat report_html.html || echo "report_html.html not found"
-          echo "=== report_json.json ==="
-          cat report_json.json || echo "report_json.json not found"
-          echo "=== report_md.md ==="
-          cat report_md.md || echo "report_md.md not found"
-
       - name: Upload ZAP Reports
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: zap_reports
+          name: zap-reports
           path: |
             report_html.html
             report_json.json
             report_md.md
-            zap-api.json
-            zap-api.html
-          retention-days: 1
 
   nmap-scan:
     name: 🗺️ Network Discovery - Nmap
@@ -131,32 +104,125 @@ jobs:
     steps:
       - name: 🔧 Install Nmap
         run: sudo apt-get update && sudo apt-get install -y nmap
-      # (rest des steps Nmap…)
+      - name: 🗺️ Nmap Scan
+        run: |
+          TARGET_HOST=$(echo ${{ env.TARGET_URL }} | sed 's|https\?://||' | sed 's|/.*||')
+          if [[ "${{ env.SCAN_INTENSITY }}" == "light" ]]; then
+            sudo nmap -sS -O -sV --top-ports 1000 -oX nmap-basic.xml -oN nmap-basic.txt $TARGET_HOST
+          elif [[ "${{ env.SCAN_INTENSITY }}" == "medium" ]]; then
+            sudo nmap -sS -sU -O -sV -sC --script=vuln,safe,discovery -p- -oX nmap-comprehensive.xml -oN nmap-comprehensive.txt $TARGET_HOST
+          else
+            sudo nmap -sS -sU -O -sV -sC -A --script=vuln,malware,exploit,auth,brute --script-timeout=60s -p- -T4 -oX nmap-intensive.xml -oN nmap-intensive.txt $TARGET_HOST
+          fi
+      - name: Upload Nmap Reports
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: nmap-reports
+          path: nmap-*.xml
 
   sqlmap-scan:
     name: 💉 SQL Injection Testing - SQLMap
     runs-on: ubuntu-latest
     needs: pre-scan-validation
-    if: needs.pre-scan-validation.outputs.target-accessible == 'true' && (github.event.inputs.scan_intensity == 'intensive' || github.event.inputs.scan_intensity == '')
+    if: needs.pre-scan-validation.outputs.target-accessible == 'true'
     steps:
       - name: 🔧 Install SQLMap
         run: sudo apt-get update && sudo apt-get install -y sqlmap
-      # (rest des steps SQLMap…)
+      - name: 💉 SQLMap Scan
+        run: |
+          sqlmap -u "${{ env.TARGET_URL }}" --crawl=3 --batch --random-agent --level=3 --risk=2 --output-dir=sqlmap-results || true
+      - name: Upload SQLMap Reports
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: sqlmap-reports
+          path: sqlmap-results/
 
   arachni-scan:
     name: 🕸️ Arachni Web Scanner
     runs-on: ubuntu-latest
     needs: pre-scan-validation
-    # (rest des steps Arachni…)
+    steps:
+      - name: 🔧 Install Arachni
+        run: |
+          wget https://github.com/Arachni/arachni/releases/download/v1.6.1.3/arachni-1.6.1.3-0.6.1.1-linux-x86_64.tar.gz
+          tar -xzf arachni-1.6.1.3-0.6.1.1-linux-x86_64.tar.gz
+          echo "$(pwd)/arachni-1.6.1.3-0.6.1.1/bin" >> $GITHUB_PATH
+      - name: 🕸️ Arachni Scan
+        run: |
+          arachni ${{ env.TARGET_URL }} --report-save-path=arachni-report.afr --output-verbose --scope-page-limit=50
+      - name: 📊 Generate Reports
+        run: |
+          arachni_reporter arachni-report.afr --reporter=html:outfile=arachni-report.html
+          arachni_reporter arachni-report.afr --reporter=json:outfile=arachni-report.json
+      - name: Upload Reports
+        uses: actions/upload-artifact@v4
+        with:
+          name: arachni-reports
+          path: |
+            arachni-report.html
+            arachni-report.json
+            arachni-report.afr
 
   w3af-scan:
     name: 🌐 w3af Web Security Scanner
     runs-on: ubuntu-latest
     needs: pre-scan-validation
-    # (rest des steps w3af…)
+    steps:
+      - name: 🔧 Install w3af
+        run: |
+          sudo apt-get update && sudo apt-get install -y python3-pip git
+          git clone https://github.com/andresriancho/w3af.git
+          cd w3af && pip3 install -r requirements.txt || true
+      - name: 🌐 Run w3af Scan
+        run: |
+          cd w3af
+          cat > pentest_script.w3af <<EOF
+          plugins
+          output console,text_file
+          output config text_file
+          set output_file w3af-output.txt
+          back
+          crawl web_spider
+          audit sqli,xss,csrf
+          target
+          set target ${{ env.TARGET_URL }}
+          back
+          start
+          exit
+          EOF
+          python3 w3af_console -s pentest_script.w3af || true
+      - name: Upload Reports
+        uses: actions/upload-artifact@v4
+        with:
+          name: w3af-reports
+          path: w3af/w3af-output.txt
 
   ssl-tls-scan:
-    name: 🔒 SSL/TLS Security - SSLyze
+    name: 🔒 SSL/TLS Security Scan
     runs-on: ubuntu-latest
     needs: pre-scan-validation
-    # (rest des steps SSLyze…)
+    steps:
+      - name: 🔧 Install SSLyze
+        run: pip3 install sslyze
+      - name: 🔒 Run SSLyze
+        run: |
+          TARGET_HOST=$(echo ${{ env.TARGET_URL }} | sed 's|https\?://||' | sed 's|/.*||')
+          sslyze --regular $TARGET_HOST:443 --json_out sslyze-report.json || true
+      - name: 🔧 Install testssl.sh
+        run: |
+          git clone https://github.com/drwetter/testssl.sh.git
+          chmod +x testssl.sh/testssl.sh
+      - name: 🔒 Run testssl.sh
+        run: |
+          TARGET_HOST=$(echo ${{ env.TARGET_URL }} | sed 's|https\?://||' | sed 's|/.*||')
+          ./testssl.sh/testssl.sh --jsonfile testssl-report.json --htmlfile testssl-report.html $TARGET_HOST:443 || true
+      - name: Upload SSL Reports
+        uses: actions/upload-artifact@v4
+        with:
+          name: ssl-reports
+          path: |
+            sslyze-report.json
+            testssl-report.html
+            testssl-report.json
